--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "lint": "eslint . --ext .js,.astro",
     "lint:fix": "eslint . --ext .js,.astro --fix"
   },
+  "simple-git-hooks": {
+    "pre-commit": "pretty-quick --staged"
+  },
   "dependencies": {
     "astro": "^4.15.4"
   },
@@ -25,6 +28,8 @@
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-astro-organize-imports": "^0.4.9",
-    "prettier-plugin-tailwindcss": "^0.6.6"
+    "prettier-plugin-tailwindcss": "^0.6.6",
+    "pretty-quick": "^4.0.0",
+    "simple-git-hooks": "^2.11.1"
   }
 }
