--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "lint:fix": "eslint . --ext .js,.astro --fix"
   },
   "simple-git-hooks": {
-    "pre-commit": "pretty-quick --staged"
+    "pre-commit": "npx pretty-quick --staged"
   },
   "dependencies": {
-    "astro": "^4.15.4"
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.15.4",
+    "tailwindcss": "^3.4.11"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.5.0",
