feat(app): implement v1 with screen navigation and push notifications

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,9 @@
     "sourceType": "module"
   },
   "rules": {
-    "semi": ["error", "always"]
+    "semi": ["error", "always"],
+    "comma-dangle": ["error", "always-multiline"],
+    "dot-notation": ["allowKeywords", "true"]
   },
   "overrides": [
     {
