--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.8.1",
+    "@fontsource/geist-sans": "^5.1.0",
     "astro": "^4.15.4",
     "tailwindcss": "^3.4.11"
   },
