feat: user authentication

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,3 @@
-INDIGITALL_API_KEY = 94cb9c3e-0749-450f-8445-49bf2b269d8a
+INDIGITALL_API_KEY=94cb9c3e-0749-450f-8445-49bf2b269d8a
+AUTH_TRUST_HOST=true
+AUTH_SECRET=cl+y7TZZOweNn36IQo22EBRrLNyL9V59
